--- a/index.html
+++ b/index.html
@@ -8,24 +8,19 @@
 <style>
   :root { --gap: 12px; --dur: .8s; --ratio: 1.6667; --cardW: 116px; }
   html,body{margin:0;height:100%;background:#0d1014;color:#fff;font-family:system-ui,Segoe UI,Roboto,Arial;}
-  .wrap{max-width:920px;margin:0 auto;padding:14px 14px 70px;display:flex;flex-direction:column;gap:14px;}
+  .wrap{max-width:920px;margin:0 auto;padding:14px 14px 40px;display:flex;flex-direction:column;gap:14px;}
   .rows{display:flex;flex-direction:column;gap:14px;align-items:center}
   .row{display:flex;gap:var(--gap);justify-content:center;align-items:center;width:100%}
-  .card{position:relative;perspective:900px;-webkit-perspective:900px;width:var(--cardW);height:calc(var(--cardW)*var(--ratio));cursor:pointer;flex:0 0 auto}
-  .card .card-inner{position:absolute; inset:0; overflow:visible; transform-style:preserve-3d; -webkit-transform-style:preserve-3d; transition: transform var(--dur) ease, box-shadow .35s ease; -webkit-transition: -webkit-transform var(--dur) ease, box-shadow .35s ease; box-shadow:0 6px 22px rgba(0,0,0,.45); will-change: transform; transform: rotateY(180deg); -webkit-transform: rotateY(180deg);}
-  .card.selected .card-inner{transform: rotateY(0deg); -webkit-transform: rotateY(0deg); box-shadow:0 0 22px rgba(230,200,145,.55),0 10px 22px rgba(0,0,0,.55);}
+  .card{position:relative;perspective:900px;width:var(--cardW);height:calc(var(--cardW)*var(--ratio));cursor:pointer;flex:0 0 auto}
+  .card .card-inner{position:absolute; inset:0; overflow:visible; transform-style:preserve-3d; transition: transform var(--dur) ease, box-shadow .35s ease; box-shadow:0 6px 22px rgba(0,0,0,.45); transform: rotateY(180deg);}
+  .card.selected .card-inner{transform: rotateY(0deg); box-shadow:0 0 22px rgba(230,200,145,.55),0 10px 22px rgba(0,0,0,.55);}
   .card.locked{pointer-events:none}
-  .side{ position:absolute; inset:0; backface-visibility:hidden; -webkit-backface-visibility:hidden; transform-style:preserve-3d; -webkit-transform-style:preserve-3d; display:flex; align-items:center; justify-content:center; }
+  .side{ position:absolute; inset:0; backface-visibility:hidden; transform-style:preserve-3d; display:flex; align-items:center; justify-content:center; }
   .side img{ width:100%; height:100%; object-fit:contain; display:block; }
-  .side.face{ transform: rotateY(0deg) translateZ(0.1px); -webkit-transform: rotateY(0deg) translateZ(0.1px); }
-  .side.back{ transform: rotateY(180deg) translateZ(0.1px); -webkit-transform: rotateY(180deg) translateZ(0.1px); }
+  .side.face{ transform: rotateY(0deg) translateZ(0.1px); }
+  .side.back{ transform: rotateY(180deg) translateZ(0.1px); }
   .fade-out{opacity:0;transition:opacity .3s ease}
-  .floating{ position:fixed !important; z-index:40; margin:0 !important; transition: transform 1.5s ease-in-out !important; will-change:transform,left,top; transform-origin: top left; -webkit-transform-origin: top left; }
-  .contbar{ position:fixed; z-index:50; display:none; left:50%; transform:translateX(-50%); }
-  .contbar.show{ display:block; animation:rise .25s ease both }
-  @keyframes rise{from{transform:translate(-50%,6px);opacity:0}to{transform:translate(-50%,0);opacity:1}}
-  .btn{background:#1f2937;color:#fff;border:1px solid #334155;border-radius:12px;padding:12px 18px;font-size:16px;cursor:pointer;box-shadow:0 6px 18px rgba(0,0,0,.35)}
-  .btn:disabled{opacity:.6;cursor:not-allowed}
+  .floating{ position:fixed !important; z-index:40; margin:0 !important; transition: transform 1.5s ease-in-out !important; will-change:transform,left,top; transform-origin: top left; }
   .banner{position:fixed;left:50%;top:10px;transform:translateX(-50%);background:#b91c1c;color:#fff;padding:8px 12px;border-radius:10px;font-size:13px;display:none}
   .banner.show{display:block}
 </style>
@@ -37,24 +32,20 @@
     <div class="row bottom" id="rowBottom"></div>
   </div>
 </div>
-
-<div class="contbar" id="contbar"><button class="btn" id="btnDone" disabled>Продолжить</button></div>
 <div id="warn" class="banner">Откройте эту страницу из бота по кнопке — иначе данные не отправятся.</div>
 
 <script>
 (function(){
   const tg = (window.Telegram && Telegram.WebApp) ? Telegram.WebApp : null;
-  if (tg){
-    try{ tg.ready(); tg.expand(); tg.setHeaderColor("secondary_bg_color"); }catch(e){}
-  } else {
-    document.getElementById('warn').classList.add('show');
-  }
+  if (tg){ try{ tg.ready(); tg.expand(); tg.setHeaderColor("secondary_bg_color"); }catch(e){} }
+  else { document.getElementById('warn').classList.add('show'); }
 
-  const V = 'v19';
+  const V = 'v21'; // кеш-бастер
   const z2 = n => String(n).padStart(2,'0');
   const faceUrl = id => `faces/${z2(id)}.png?${V}`;
   const backUrl = `faces/back.png?${V}`;
 
+  // Имена карт (0..77) — чтобы сформировать CSV на стороне клиента (на бота прилетят и ids, и names)
   const MAJORS = ["Шут","Маг","Верховная Жрица","Императрица","Император","Иерофант","Влюблённые","Колесница","Сила","Отшельник","Колесо Фортуны","Справедливость","Повешенный","Смерть","Умеренность","Дьявол","Башня","Звезда","Луна","Солнце","Суд","Мир"];
   const RANKS = ["Туз","Двойка","Тройка","Четвёрка","Пятёрка","Шестёрка","Семёрка","Восьмёрка","Девятка","Десятка","Паж","Рыцарь","Королева","Король"];
   const SUITS_ORDER = ["Жезлов","Кубков","Мечей","Пентаклей"];
@@ -64,8 +55,6 @@
 
   const rowTop = document.getElementById('rowTop');
   const rowBottom = document.getElementById('rowBottom');
-  const contbar = document.getElementById('contbar');
-  const btnDone = document.getElementById('btnDone');
 
   const ALL = Array.from({length:78}, (_,i)=>i);
   shuffle(ALL);
@@ -74,26 +63,28 @@
   const bottomIds = seed.slice(3,7);
   let selected = [];
 
+  // MainButton (родной от Telegram)
+  if (tg){
+    tg.MainButton.setText("Продолжить");
+    tg.MainButton.hide();
+    tg.onEvent("mainButtonClicked", onDone);
+  }
+
   preload([backUrl, ...seed.map(faceUrl)]).then(build);
 
-  btnDone.addEventListener('click', () => {
+  function onDone(){
     if (selected.length !== 3) return;
     const names = selected.map(id => nameById(id));
-    const payload = { type:'three_cards', cards:selected, names:names.join(', ') };
-    console.log("[webapp] sendData:", payload);
-    if (tg && typeof tg.sendData === "function"){
-      try{
-        tg.sendData(JSON.stringify(payload));
-        // подстрахуемся от раннего закрытия на iOS/Android
-        setTimeout(()=>{ try{ tg.close(); }catch(e){} }, 400);
-      }catch(e){
-        console.error("[webapp] sendData error:", e);
-        alert("Ошибка отправки в бота. Откройте страницу через кнопку в боте и попробуйте ещё раз.");
-      }
-    }else{
-      alert("Эту страницу нужно открыть внутри Telegram по кнопке бота.\n\n" + JSON.stringify(payload));
+    const payload = { type:"three_cards", cards:selected, names:names.join(", ") };
+    try{
+      tg.MainButton.showProgress(true);
+      tg.sendData(JSON.stringify(payload));
+      setTimeout(()=>{ try{ tg.close(); }catch(e){} }, 120);
+    }catch(e){
+      // если по какой-то причине не внутри Telegram
+      alert("Откройте страницу из бота по кнопке.\n\n" + JSON.stringify(payload));
     }
-  });
+  }
 
   function build(){
     setCardW();
@@ -109,7 +100,7 @@
     const sidePad = 28;
     const gaps = 3 * parseFloat(getComputedStyle(document.documentElement).getPropertyValue('--gap')) || 36;
     const maxByWidth = Math.floor((vw - sidePad - gaps) / 4);
-    const headerH = 24, bottomPad = 100, rows = 2;
+    const headerH = 24, bottomPad = 60, rows = 2;
     const maxByHeight = Math.floor((vh - headerH - bottomPad - gaps) / (rows * 1.6667));
     const cardW = Math.max(80, Math.min(150, maxByWidth, maxByHeight));
     document.documentElement.style.setProperty('--cardW', cardW + 'px');
@@ -171,10 +162,6 @@
     const startX  = Math.round((vw - totalW)/2);
     const y       = Math.round((vh - targetH)/2);
 
-    const contTop = y + targetH + 12;
-    contbar.style.top = contTop + 'px';
-    contbar.style.left = '50%';
-
     chosen.forEach((el, i) => {
       const r = rects[i];
       const l = Math.round(r.left);
@@ -200,7 +187,8 @@
       });});
     });
 
-    setTimeout(()=>{ btnDone.disabled = false; contbar.classList.add('show'); }, 1600);
+    // показать MainButton
+    if (tg){ tg.MainButton.show(); }
   }
 
   function preload(urls){
